test_suite/tests/ui/pass/arg_option_type.rs
use clapi::macros::*;

#[command]
#[arg(number)]
fn test(number: Option<u32>){}

fn main(){}