test_suite/tests/ui/fail/invalid_arg_count_in_option/invalid_arg_option_max.rs
use clapi::macros::*;

#[command]
#[arg(value, max=2)]
fn test(value: Option<usize>){}

fn main(){}